--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BloodBridge</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/assets/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/swiper.min.css" />
   </head>
   <body>
+
     <div id="app">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <img src="/assets/img/logo.png" width="10%"></img>
         <a class ="nav-link" href="" id="home-link">Home</a>
         <a class ="nav-link" href="" id="signup-user-link">Signup as User</a>
         <a class ="nav-link" href="" id="signup-healthcenter-link">Signup as Health Center</a>
