--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BloodBridge</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/signUp.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/getList.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/requestDonate.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/swiper.min.css" />
   </head>
