add dashboard for user and healthcenter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/signUp.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/getList.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/requestDonate.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/userDashboard.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/swiper.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
 
