add validation and add statistics on home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/requestDonate.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/userDashboard.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/swiper.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
@@ -28,6 +27,7 @@
         <a class ="nav-link" href="" id="signup-user-link">Signup as User</a>
         <a class ="nav-link" href="" id="signup-healthcenter-link">Signup as Health Center</a>
         <a class ="nav-link" href="" id="login-link">Login</a>
+        <a class ="nav-link" href="" id="dashboard-link">Dashboard</a>
       </nav>
   
       <div id="content"></div>
