--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BloodBridge</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/home.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/signUp.css" />
@@ -16,6 +17,14 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/requestDonate.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/userDashboard.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" />
+
+    <style>
+      .active-link {
+        background-color: #f0f0f0;
+        color: #000; 
+      }
+    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
@@ -23,7 +32,7 @@
     <div id="app">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <img src="/assets/img/logo.png" width="10%"></img>
-        <a class ="nav-link" href="" id="home-link">Home</a>
+        <a class ="nav-link active" href="" id="home-link">Home</a>
         <a class ="nav-link" href="" id="signup-user-link">Signup as User</a>
         <a class ="nav-link" href="" id="signup-healthcenter-link">Signup as Health Center</a>
         <a class ="nav-link" href="" id="login-link">Login</a>
@@ -32,7 +41,7 @@
   
       <div id="content"></div>
     </div>
-  
+ 
     <script type="module" src="./src/scripts/main.ts"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
