--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <title>BloodBridge</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/home.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/signUp.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/getList.css" />
